# trader-data

./: AGENTS.md  CONTRIBUTING.md  DATA_MODEL.md  DATA_QUALITY.md  OPERATIONS.md  PROVIDER_INTERFACE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  contract_change.yml  feature_request.yml
.github/workflows/: ci.yml
contracts/: platform-api-entrypoint.md
src/trader_data/: __init__.py  internal_api.py  main.py  store.py
src/trader_data/adapters/: provider_interface.py
src/trader_data/ingestion/: __init__.py  pipeline.py
src/trader_data/models/: __init__.py  market_data.py  market_snapshot.py
src/trader_data/services/: __init__.py  internal_data_service.py
src/trader_data/transforms/: __init__.py  engine.py
tests/contract/: test_boundary_contracts.py  test_internal_api_contracts.py
tests/provider/: test_provider_boundary.py
tests/smoke/: test_ingestion_pipeline.py  test_internal_data_service.py  test_market_data_models.py  test_market_snapshot_validation.py  test_transform_engine.py
