[project]
name = "trader-data"
version = "0.1.0"
description = "Trade Nexus data module bootstrap"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "pydantic>=2.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trader_data"]
